# PiaoTODO

./: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
dev-logs/: 2026-06-29.md  2026-06-30.md  README.md
docs/: design.md  execution-plan.md  requirements.md  tech-spec.md  workflow.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CategoryBar.tsx  CategoryMenu.tsx  CompletedSection.tsx  InputBox.tsx  ProgressDialog.tsx  SettingsPanel.tsx  TodoItem.tsx  TodoList.tsx
src/hooks/: useLongPress.ts
src/lib/: idGenerator.ts  storage.ts
src/stores/: settingsStore.ts  todoStore.ts
src/styles/: index.css
src/types/: index.ts
tests/unit/: example.test.ts  todoStore.test.ts
